# rufaco

./: Cargo.toml
src/: common.rs  config.rs  curve.rs  fan.rs  fanhub.rs  hwmon.rs  main.rs  temperature.rs
test/: all_curves.yaml
