[package]
name = "rufaco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmedium = "0.7.0"
serde_yaml = "0.9.16"
serde = { version = "1.0.152", features = ["derive"] }
signal-hook = "0.3.14"
log = "0.4.17"
simplelog = "0.12.0"
