[package]
name = "rufaco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmedium = "0.11.0"
serde_yaml = "0.9.34"
serde = { version = "1.0.201", features = ["derive"] }
signal-hook = "0.3.17"
log = "0.4.21"
simplelog = "0.12.2"
rayon = "1.10.0"
pid = "4.0.0"
clap = { version = "4.5.4", features = ["derive"] }
mockall = "0.13.0"
more-asserts = "0.3.1"
tui = "0.19.0"
crossterm = "0.27.0"
